[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4tadashi"
version = "0.0.1"
authors = [
  { name="João Eduardo Batista"},
  { name="Emil Vatai"},
]
description = "Machine learning algorithms to be used on the TADASHI framework for C code optimization"
readme = "README.md"
requires-python = ">=3.7"


[project.urls]
"Homepage" = "https://github.com/jespb/ML4TADASHI"
